# tp2-open-data

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pipeline/: config.py  enricher.py  logger.py  main.py  models.py  quality.py  storage.py  transformer.py
pipeline/fetchers/: adresse.py  base.py  openfoodfacts.py
pipeline/tests/: test_fetchers.py  test_transformer.py
